first touch with the mongo library. added example.json